[gd_scene load_steps=2 format=3 uid="uid://rwf2x3g8i2ud"]

[ext_resource type="Script" uid="uid://bxugnl52evu1i" path="res://scripts/utility/kill_zone.gd" id="1_kebdr"]

[node name="KillZone" type="Area2D"]
collision_mask = 2
script = ExtResource("1_kebdr")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.8

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
